--- a/10lessons/03_lesson/index.html
+++ b/10lessons/03_lesson/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="author" content="Dave Gray">
+    <meta name="author" content="Mufil Rahman">
     <meta name="description" content="This page contains all the things I am learning how to create as I learn HTML.">
     <title>My First Web Page</title>
     <link rel="icon" href="html5.png" type="image/x-icon">
@@ -45,7 +45,7 @@
     <p>Anywhere cold. <strong>No way!</strong></p>
 
     <hr>
-    &lt;&lt;&lt; &copy; Dave Gray &gt;&gt;&gt;
+    &lt;&lt;&lt; &copy; Mufil Rahman &gt;&gt;&gt;
 </body>
 
 </html>
