--- a/10lessons/05_lesson/index.html
+++ b/10lessons/05_lesson/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="author" content="Dave Gray">
+    <meta name="author" content="Mufil Rahman">
     <meta name="description" content="This page contains all the things I am learning how to create as I learn HTML.">
     <title>My First Web Page</title>
     <link rel="icon" href="html5.png" type="image/x-icon">
@@ -79,7 +79,7 @@
     </section>
 
     <hr>
-    &lt;&lt;&lt; &copy; <a href="about.html">Dave Gray</a> &gt;&gt;&gt;
+    &lt;&lt;&lt; &copy; <a href="about.html">Mufil Rahman</a> &gt;&gt;&gt;
     <p>
         <a href="#">Back to Top</a>
     </p>
