--- a/10lessons/08_lesson/about.html
+++ b/10lessons/08_lesson/about.html
@@ -3,15 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="author" content="Dave Gray">
-    <meta name="description" content="Hi, I'm Dave Gray. This page is about me.">
+    <meta name="author" content="Mufil Rahman">
+    <meta name="description" content="Hi, I'm Mufil Rahman. This page is about me.">
     <title>About Me</title>
     <link rel="icon" href="html5.png" type="image/x-icon">
     <link rel="stylesheet" href="main.css" type="text/css">
 </head>
 
 <body>
-    <h1>Hi, I'm Dave Gray</h1>
+    <h1>Hi, I'm Mufil Rahman</h1>
 
     <hr>
 
@@ -38,7 +38,7 @@
     </ul>
 
     <hr>
-    &lt;&lt;&lt; &copy; <a href="about.html">Dave Gray</a> &gt;&gt;&gt;
+    &lt;&lt;&lt; &copy; <a href="about.html">Mufil Rahman</a> &gt;&gt;&gt;
     <p>
         <a href="/">Back to Home</a>
     </p>
