--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       </form>
     </div>
   </section>
-
+  <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
+  <script src="https://files.bpcontent.cloud/2024/11/06/17/20241106175028-RC82EYN9.js"></script>
 </body>
 </html>
