--- a/index.html
+++ b/index.html
@@ -1,72 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Personal Portfolio</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-
-  <!-- Header with Navigation -->
-  <header>
-    <nav>
-      <div class="container">
-        <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>House of Tailors</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header class="bg-dark text-white">
+      <div class="container py-3">
+        <div class="d-flex justify-content-between align-items-center">
+          <h1 class="h4">House of Tailors</h1>
+          <nav>
+            <ul class="nav">
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#men">Men</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#women">Women</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#wedding">Wedding</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#fabrics">Fabrics</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#appointment"
+                  >Book Appointment</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#contact">Contact</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
       </div>
-    </nav>
-  </header>
+    </header>
 
-  <!-- Main Section -->
-  <section id="home" class="main-section">
-    <div class="container">
-      <h1>Hi, I'm Mufil Rahman A</h1>
-      <p>A passionate developer creating amazing web experiences.</p>
-      <img src="https://xsgames.co/randomusers/assets/avatars/male/42.jpg" alt="Profile Picture">
-      <p>Brief Bio: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac orci at nulla ultricies volutpat.</p>
-    </div>
-  </section>
+    <main class="container mt-4">
+      <!-- Hero Section -->
+      <section id="hero" class="text-center bg-light py-5">
+        <h2>Welcome to House of Tailors</h2>
+        <p>Your one-stop solution for bespoke tailoring services.</p>
+      </section>
 
-  <!-- Projects Section -->
-  <section id="projects" class="projects">
-    <h2>My Projects</h2>
-    <div class="project-cards">
-      <div class="project-card">
-        <img src="asset/images/project1.jpg" alt="Project 1">
-        <h3>Project Title 1</h3>
-        <p>Short description of the project. This project involved using HTML, CSS, and JavaScript to create a responsive layout.</p>
-      </div>
-      <div class="project-card">
-        <img src="asset/images/project2.jpg" alt="Project 2">
-        <h3>Project Title 2</h3>
-        <p>Short description of the project. This project involved creating a dynamic web application using Angular and Firebase.</p>
-      </div>
-      <div class="project-card">
-        <img src="asset/images/project3.jpg" alt="Project 3">
-        <h3>Project Title 3</h3>
-        <p>Short description of the project. This project involved creating a single-page application using React.js and Node.js.</p>
-      </div>
-    </div>
-  </section>
+      <!-- Men Section -->
+      <section id="men" class="py-5">
+        <h3 class="text-center mb-4">Men's Collection</h3>
+        <div class="row">
+          <div class="col-md-4">
+            <h4>Made to Measure Suits</h4>
+            <p>Perfect fit suits crafted to your measurements.</p>
+          </div>
+          <div class="col-md-4">
+            <h4>Bespoke Suits</h4>
+            <p>Tailored suits for every occasion.</p>
+          </div>
+          <div class="col-md-4">
+            <h4>Double Breasted Suits</h4>
+            <p>Classic and elegant styles.</p>
+          </div>
+        </div>
+      </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="contact">
-    <div class="container">
-      <h2>Contact Me</h2>
-      <form>
-        <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="Your Email" required>
-        <textarea placeholder="Your Message" required></textarea>
-        <button type="submit">Send</button>
-      </form>
-    </div>
-  </section>
-  <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
-  <script src="https://files.bpcontent.cloud/2024/11/06/17/20241106175028-RC82EYN9.js"></script>
-</body>
+      <!-- Women Section -->
+      <section id="women" class="bg-light py-5">
+        <h3 class="text-center mb-4">Women's Collection</h3>
+        <div class="row">
+          <div class="col-md-4">
+            <h4>Formal Wear</h4>
+            <p>Professional and stylish suits.</p>
+          </div>
+          <div class="col-md-4">
+            <h4>Business Suits</h4>
+            <p>Tailored for success.</p>
+          </div>
+          <div class="col-md-4">
+            <h4>Occasion Suits</h4>
+            <p>Designed for memorable moments.</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- How It Works Section -->
+      <section id="how-it-works" class="py-5">
+        <h3 class="text-center mb-4">How It Works</h3>
+        <div class="row text-center">
+          <div class="col-md-3">
+            <h4>Meet Your Stylist</h4>
+          </div>
+          <div class="col-md-3">
+            <h4>Select Your Fabric</h4>
+          </div>
+          <div class="col-md-3">
+            <h4>Get Measured</h4>
+          </div>
+          <div class="col-md-3">
+            <h4>Final Delivery</h4>
+          </div>
+        </div>
+      </section>
+
+      <!-- Contact Section -->
+      <section id="contact" class="bg-light py-5">
+        <h3 class="text-center mb-4">Contact Us</h3>
+        <div class="text-center">
+          <p>Phone: +971 50 937 2696</p>
+          <p>Email: info@houseoftailors.co</p>
+        </div>
+      </section>
+    </main>
+
+    <footer class="bg-dark text-white py-3">
+      <div class="container text-center">
+        <p>&copy; 2024 House of Tailors. All rights reserved.</p>
+      </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
+    <script src="https://files.bpcontent.cloud/2024/11/06/17/20241106175028-RC82EYN9.js"></script>
+  </body>
 </html>
