--- a/03-dom-manipulation/03-class/index.html
+++ b/03-dom-manipulation/03-class/index.html
@@ -27,7 +27,7 @@
       <li class="list-group-item">Item 3</li>
       <li class="list-group-item">Item 4</li>
     </ul>
-    <h2 class="title">students</h2>
+    <h2 class="title">Students</h2>
     <ul id="students" class="list-group">
       <li class="list-group-item">Student 1</li>
       <li class="list-group-item">Student 2</li>
