--- a/03-dom-manipulation/04-class/index.html
+++ b/03-dom-manipulation/04-class/index.html
@@ -27,6 +27,7 @@
       <li class="list-group-item">Item 3</li>
       <li class="list-group-item">Item 4</li>
     </ul>
+    <button id="btn" class="btn btn-dark">Click Me </button>
    </div>
   </div>
 </body>
