feat: add event listeners for button interactions and mouse events in DOM manipulation example

--- a/03-dom-manipulation/04-class/index.html
+++ b/03-dom-manipulation/04-class/index.html
@@ -29,6 +29,11 @@
     </ul>
     <button id="btn" class="btn btn-dark">Click Me </button>
    </div>
+    <div class="container d-flex justify-content-center align-items-center border border-dark" id="box" style="min-height: 100px; min-width: 100px;">
+      <h3>Code craftors</h3>
+    </div>
+
+  </div>
   </div>
 </body>
 <script src="main.js"></script>
