--- a/03-dom-manipulation/05-class/index.html
+++ b/03-dom-manipulation/05-class/index.html
@@ -18,6 +18,11 @@
     <h2 class="title">Add Items</h2>
     <form class="form-inline mb-3">
       <input type="text" class="form-control mr-2">
+      <select name="select" class="form-control custom-select mr-2">
+        <option value="option 1">Option 1</option>
+        <option value="option2">Option 2</option>
+        <option value="option3">Option 3</option>
+      </select>
       <input type="submit" class="btn btn-dark" value="Submit">
     </form>
     <h2 class="title">Items</h2>
