style: add margin-top to button for improved spacing

--- a/03-dom-manipulation/04-class/index.html
+++ b/03-dom-manipulation/04-class/index.html
@@ -27,7 +27,7 @@
       <li class="list-group-item">Item 3</li>
       <li class="list-group-item">Item 4</li>
     </ul>
-    <button id="btn" class="btn btn-dark">Click Me </button>
+    <button id="btn" class="btn btn-dark mt-3">Click Me </button>
    </div>
     <div class="container d-flex justify-content-center align-items-center border border-dark" id="box" style="min-height: 100px; min-width: 100px;">
       <h3>Code craftors</h3>
